--- a/hzda-web/src/main/webapp/WEB-INF/static/css/menuicon.css
+++ b/hzda-web/src/main/webapp/WEB-INF/static/css/menuicon.css
@@ -58,35 +58,41 @@
 .rmyy-monitor-jpaql-tree{background:url('../image/menu/monitor/jpaql.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-monitor-hibernate{background:url('../image/menu/monitor/hibernate.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-monitor-hibernate-tree{background:url('../image/menu/monitor/hibernate.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-personal-medicine{background:url('../image/menu/personal/medicine.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-personal-medicine-tree{background:url('../image/menu/personal/medicine.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-hospitalcontents{background:url('../image/menu/yjk/hospitalcontents.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-hospitalcontents-tree{background:url('../image/menu/yjk/hospitalcontents.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-commonnamecontents{background:url('../image/menu/yjk/commonnamecontents.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-commonnamecontents-tree{background:url('../image/menu/yjk/commonnamecontents.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-commonname{background:url('../image/menu/yjk/commonname.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-commonname-tree{background:url('../image/menu/yjk/commonname.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-administration{background:url('../image/menu/yjk/administration.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-administration-tree{background:url('../image/menu/yjk/administration.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-systemparameter{background:url('../image/menu/yjk/systemparamter.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-systemparameter-tree{background:url('../image/menu/yjk/systemparamter.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-commonnamerule{background:url('../image/menu/yjk/commonnamerule.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-commonnamerule-tree{background:url('../image/menu/yjk/commonnamerule.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-system-onlineeditor{background:url('../image/menu/system/onlineeditor.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-system-onlineeditor-tree{background:url('../image/menu/system/onlineeditor.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-system-staticresource{background:url('../image/menu/system/staticresource.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-system-staticresource-tree{background:url('../image/menu/system/staticresource.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-reviewmain{background:url('../image/menu/yjk/reviewmain.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-reviewmain-tree{background:url('../image/menu/yjk/reviewmain.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%,}
-.rmyy-yjk-specialrule{background:url('../image/menu/yjk/specialrule.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-specialrule-tree{background:url('../image/menu/yjk/specialrule.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-departmentattribute{background:url('../image/menu/yjk/departmentattribute.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-departmentattribute-tree{background:url('../image/menu/yjk/departmentattribute.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-profession{background:url('../image/menu/yjk/profession.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-profession-tree{background:url('../image/menu/yjk/profession.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-technicaltitle{background:url('../image/menu/yjk/technicaltitle.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-technicaltitle-tree{background:url('../image/menu/yjk/technicaltitle.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
-.rmyy-yjk-appointment{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-appointment-tree{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-generalinformation{background:url('../image/menu/hzda/generalinformation.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-generalinformation-tree{background:url('../image/menu/hzda/generalinformation.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-complained{background:url('../image/menu/hzda/complained.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-complained-tree{background:url('../image/menu/hzda/complained.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-cataclasis{background:url('../image/menu/hzda/cataclasis.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-cataclasis-tree{background:url('../image/menu/hzda/cataclasis.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-anamnesis{background:url('../image/menu/hzda/anamnesis.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-anamnesis-tree{background:url('../image/menu/hzda/anamnesis.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-presentillness{background:url('../image/menu/hzda/presentillness.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-presentillness-tree{background:url('../image/menu/hzda/presentillness.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-operation{background:url('../image/menu/hzda/operation.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-operation-tree{background:url('../image/menu/hzda/operation.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-personal{background:url('../image/menu/hzda/personal.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-personal-tree{background:url('../image/menu/hzda/personal.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-marriagebearing{background:url('../image/menu/hzda/marriagebearing.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-marriagebearing-tree{background:url('../image/menu/hzda/marriagebearing.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-family{background:url('../image/menu/hzda/family.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-family-tree{background:url('../image/menu/hzda/family.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-renaltransplant{background:url('../image/menu/hzda/renaltransplant.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-renaltransplant-tree{background:url('../image/menu/hzda/renaltransplant.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-examined{background:url('../image/menu/hzda/examined.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-examined-tree{background:url('../image/menu/hzda/examined.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-diagnosis{background:url('../image/menu/hzda/diagnosis.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-diagnosis-tree{background:url('../image/menu/hzda/diagnosis.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-diagnosticmeasures{background:url('../image/menu/hzda/diagnosticmeasures.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-diagnosticmeasures-tree{background:url('../image/menu/hzda/diagnosticmeasures.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-examinationlaboratoryresults{background:url('../image/menu/hzda/examinationlaboratoryresults.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-examinationlaboratoryresults-tree{background:url('../image/menu/hzda/examinationlaboratoryresults.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-bonedensity{background:url('../image/menu/hzda/bonedensity.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-bonedensity-tree{background:url('../image/menu/hzda/bonedensity.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-fracture{background:url('../image/menu/hzda/fracture.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-fracture-tree{background:url('../image/menu/hzda/fracture.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-fractureother{background:url('../image/menu/hzda/fractureother.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-fractureother-tree{background:url('../image/menu/hzda/fractureother.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-hzda-medicationrecord{background:url('../image/menu/hzda/medicationrecord.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-hzda-medicationrecord-tree{background:url('../image/menu/hzda/medicationrecord.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-system-notice{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-system-notice-tree{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
