--- a/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
@@ -86,11 +86,13 @@
 .rmyy-yjk-profession-tree{background:url('../image/menu/yjk/profession.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%,}
 .rmyy-yjk-technicaltitle{background:url('../image/menu/yjk/technicaltitle.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-yjk-technicaltitle-tree{background:url('../image/menu/yjk/technicaltitle.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%,}
-.rmyy-yjk-appointment{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
-.rmyy-yjk-appointment-tree{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%,}
 .rmyy-system-notice{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-system-notice-tree{background:url('../image/menu/system/notice.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-yjk-displaycolumn{background:url('../image/menu/yjk/displaycolumn.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-yjk-displaycolumn-tree{background:url('../image/menu/yjk/displaycolumn.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-yjk-reviewbaserule{background:url('../image/menu/yjk/reviewbaserule.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-yjk-reviewbaserule-tree{background:url('../image/menu/yjk/reviewbaserule.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-yjk-appointment{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-yjk-appointment-tree{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-yjk-voterecord{background:url('../image/menu/yjk/voterecord.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-yjk-voterecord-tree{background:url('../image/menu/yjk/voterecord.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
