add icon file and fix bug

--- a/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
@@ -119,3 +119,9 @@
 .icon-forced-open{
 	background: url('icons/buttons/forced_open.png') no-repeat;
 }
+.icon-give-up{
+	background: url('icons/buttons/give_up.png') no-repeat;
+}
+.icon-sign{
+	background: url('icons/buttons/sign.png') no-repeat;
+}
