add new function and fix bug

--- a/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
@@ -125,3 +125,6 @@
 .icon-sign{
 	background: url('icons/buttons/sign.png') no-repeat;
 }
+.icon-next{
+	background: url('icons/buttons/next.png') no-repeat;
+}
