add new function

--- a/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/menuicon.css
@@ -96,3 +96,9 @@
 .rmyy-yjk-appointment-tree{background:url('../image/menu/yjk/appointment.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
 .rmyy-yjk-voterecord{background:url('../image/menu/yjk/voterecord.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
 .rmyy-yjk-voterecord-tree{background:url('../image/menu/yjk/voterecord.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-yjk-voteresult{background:url('../image/menu/yjk/voteresult.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-yjk-voteresult-tree{background:url('../image/menu/yjk/voteresult.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-yjk-uservote{background:url('../image/menu/yjk/uservote.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-yjk-uservote-tree{background:url('../image/menu/yjk/uservote.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
+.rmyy-yjk-drugvote{background:url('../image/menu/yjk/drugvote.png') no-repeat -0px -0px;width:48px;height:48px;display:inline-block;vertical-align: middle;}
+.rmyy-yjk-drugvote-tree{background:url('../image/menu/yjk/drugvote.png') no-repeat -0px -0px;width:16px;height:18px;display:inline-block;vertical-align: middle;background-size:100%;}
