--- a/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
+++ b/yjk-web/src/main/webapp/WEB-INF/static/css/button.css
@@ -128,3 +128,6 @@
 .icon-next{
 	background: url('icons/buttons/next.png') no-repeat;
 }
+.icon-run{
+	background: url('icons/buttons/run.png') no-repeat;
+}
